cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../libs/${ANDROID_ABI})

#添加子目录，将自动找到子目录中的CMakeLists.txt
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/bitmap)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/anim)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/mln)

# 独立组件独立打包，并通过lua自身的require机制加载
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/mln/independent)
